client/app/styles/inputs.less
label, input, textarea {
  font-size: 1.2em;
}



md-input-container {
//  margin: 25px 0 18px;
  margin: 25px 0 0;

  padding-left: 0;
  padding-right: 0;

  &:not(.md-input-invalid),
  &:not(.md-input-invalid).md-input-focused, {
    label {
      color: @deep-blue;
    }
    .md-input {
      border-color: @deep-blue;
    }
  }


  [ng-messages],
  [ng-message] {
    padding-top: 2px !important;
  }


  input,
  input.md-input {
    border-radius: 0;
    color: @dark-grey;

    padding-left: 0;
    padding-right: 0;
    padding-bottom: 10px !important;

    margin-bottom: 2px;

    background-color: transparent;

    &:focus {
      outline: none;
    }
  }

  textarea,
  textarea.md-input {
    width: 100%;
    padding-left: 0;
    padding-right: 0;
    padding-bottom: 10px !important;
  }


  &.bold {
    &.md-input-focused {
      .md-input {
        border-width: 0 0 3px 0;
      }
    }
    .md-input {
      border-width: 0 0 2px 0;
    }
  }

  &.optional {
    &:not(.md-input-invalid),
    &:not(.md-input-invalid).md-input-focused, {
      .md-input {
        border-color: @grey;
      }
    }

    //margin: 8px 0;

    @placeholder-color: @grey;
    input:placeholder { color: @placeholder-color; }
    textarea:placeholder { color: @placeholder-color; }
    input::placeholder { color: @placeholder-color; }
    textarea::placeholder { color: @placeholder-color; }
    input:-webkit-input-placeholder { color: @placeholder-color; }
    textarea:-webkit-input-placeholder { color: @placeholder-color; }
    input::-webkit-input-placeholder { color: @placeholder-color; }
    textarea::-webkit-input-placeholder { color: @placeholder-color; }
    input:-moz-placeholder { color: @placeholder-color; }
    textarea:-moz-placeholder { color: @placeholder-color; }
    input::-moz-placeholder { color: @placeholder-color; }
    textarea::-moz-placeholder { color: @placeholder-color; }
    input:-ms-input-placeholder { color: @placeholder-color; }
    textarea:-ms-input-placeholder { color: @placeholder-color; }
  }


  @placeholder-color: @medium-grey;
  input:placeholder { color: @placeholder-color; }
  textarea:placeholder { color: @placeholder-color; }
  input::placeholder { color: @placeholder-color; }
  textarea::placeholder { color: @placeholder-color; }
  input:-webkit-input-placeholder { color: @placeholder-color; }
  textarea:-webkit-input-placeholder { color: @placeholder-color; }
  input::-webkit-input-placeholder { color: @placeholder-color; }
  textarea::-webkit-input-placeholder { color: @placeholder-color; }
  input:-moz-placeholder { color: @placeholder-color; }
  textarea:-moz-placeholder { color: @placeholder-color; }
  input::-moz-placeholder { color: @placeholder-color; }
  textarea::-moz-placeholder { color: @placeholder-color; }
  input:-ms-input-placeholder { color: @placeholder-color; }
  textarea:-ms-input-placeholder { color: @placeholder-color; }

}


input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  /* display: none; <- Crashes Chrome on hover */
  -webkit-appearance: none;
  margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
}




md-input-container {
  width: 100%;
}

